# resma

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
resma/: images.py  jinja_globals.py  main.py  process_md.py
resma.dev/: config.toml
resma.dev/content/: _index.md
resma.dev/content/docs/: _index.md
resma.dev/public/: index.html
resma.dev/public/docs/: index.html
resma.dev/public/styles/: homepage.css
resma.dev/templates/: base.html  index.html
resma/templates/: config.toml.jinja2
resma_cli/: images.py  jinja_globals.py  main.py  process_md.py  utils.py
resma_cli/templates/: config.toml.jinja2
tests/: conftest.py  test_cli.py
tests/assets/full_resma_project/: config.toml
tests/assets/full_resma_project/content/: _index.md
tests/assets/full_resma_project/content/inner/: _index.md  other.md
tests/assets/full_resma_project/templates/: index.html
