[tool.poetry]
name = "resma-cli"
version = "0.1.0"
description = ""
authors = ["Thiago Campos <commit@thigcampos.com>", "Ivan Santiago <ivansantiago.junior@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
resma = "resma_cli.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.9.0"}
jinja2 = "^3.1.3"
markdown = "^3.5.2"
python-frontmatter = "^1.1.0"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
taskipy = "^1.12.2"
blue = "^0.9.1"
ruff = "^0.2.1"
isort = "^5.13.2"
mypy = "^1.8.0"


[tool.pytest.ini_options]
pythonpath = "."

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
ignore_missing_imports = true
strict = false
exclude = "tests"

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff && isort . --check --diff'
types = 'mypy .'
format = 'blue .  && isort .'
pre_test = 'task lint'
test = 'pytest -s -x --cov=resma_cli -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
